--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@react-navigation/drawer": "^5.0.7",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "lodash": "^4.17.20",
+    "mobx": "^6.0.1",
+    "mobx-react": "^7.0.0",
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
@@ -24,12 +28,12 @@
     "react-native-safe-area": "^0.5.1",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.0.0-beta.8",
-    "react-native-vector-icons": "^6.6.0",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "react-native-swiper": "^1.6.0",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^0.0.7",
     "babel-jest": "^25.1.0",
