--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.0.7",
     "@react-navigation/drawer": "^5.0.7",
+    "@react-navigation/material-bottom-tabs": "^5.3.2",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "^5.0.5",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
@@ -22,8 +23,10 @@
     "moment": "^2.24.0",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-calendars": "^1.403.0",
     "react-native-device-info": "^5.5.3",
     "react-native-gesture-handler": "^1.6.0",
+    "react-native-paper": "^4.3.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-safe-area": "^0.5.1",
     "react-native-safe-area-context": "^0.7.3",
